--- a/Cloudents.Mobile/Web.config
+++ b/Cloudents.Mobile/Web.config
@@ -24,6 +24,7 @@
     <add key="AzureSearchKey" value="5B0433BFBBE625C9D60F7330CFF103F0"/>
     <add key="AzureSearchServiceName" value="cloudents"/>
     <add key="Microsoft.ServiceBus.ConnectionString" value="Endpoint=sb://cloudentsmsg-ns.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=oePM1T/GBe2ZlaDhik3MLHNXstsM4lhnCTyRTBi0bmQ="/>
+    <add key="SystemUrl" value="https://www.spitball.co"/>
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
