Trying to do something without success.

--- a/Cloudents.Mobile.Test/Cloudents.Mobile.Test.csproj
+++ b/Cloudents.Mobile.Test/Cloudents.Mobile.Test.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Cloudents.Core\Cloudents.Core.csproj" />
     <ProjectReference Include="..\Cloudents.Mobile\Cloudents.Mobile.csproj" />
   </ItemGroup>
 
