--- a/Cloudents.Infrastructure.Test/Cloudents.Infrastructure.Test.csproj
+++ b/Cloudents.Infrastructure.Test/Cloudents.Infrastructure.Test.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net47</TargetFramework>
     <IsPackable>false</IsPackable>
+    <AutoGenerateBindingRedirects>false</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <LangVersion>7.1</LangVersion>
