Wanna be nhibernate mapping check

--- a/Cloudents.Infrastructure.Framework.Test/Cloudents.Infrastructure.Framework.Test.csproj
+++ b/Cloudents.Infrastructure.Framework.Test/Cloudents.Infrastructure.Framework.Test.csproj
@@ -16,5 +16,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Cloudents.Core\Cloudents.Core.csproj" />
+    <ProjectReference Include="..\Cloudents.Infrastructure.Framework\Cloudents.Infrastructure.Framework.csproj" />
   </ItemGroup>
 </Project>
