--- a/Cloudents.Mobile.Test/Cloudents.Mobile.Test.csproj
+++ b/Cloudents.Mobile.Test/Cloudents.Mobile.Test.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net47</TargetFramework>
+    <TargetFramework>net471</TargetFramework>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
@@ -14,7 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Cloudents.Core\Cloudents.Core.csproj" />
-    <ProjectReference Include="..\Cloudents.Mobile\Cloudents.Mobile.csproj" />
+    <ProjectReference Include="..\Cloudents.MobileApi\Cloudents.MobileApi.csproj" />
   </ItemGroup>
 
 </Project>
