--- a/Cloudents.Web.Test/Cloudents.Web.Test.csproj
+++ b/Cloudents.Web.Test/Cloudents.Web.Test.csproj
@@ -17,13 +17,25 @@
 
   <ItemGroup>
     <None Remove="help.xml" />
+    <None Remove="IntegrationTests\appsettings.Development.json" />
+    <None Remove="IntegrationTests\appsettings.json" />
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="help.xml" />
+    <Content Include="IntegrationTests\appsettings.Development.json">
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Include="IntegrationTests\appsettings.json">
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="UnitTests\help.xml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="2.0.1" />
     <PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="2.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.5.0" />
     <PackageReference Include="Moq" Version="4.8.1" />
