--- a/Cloudents.Mobile/packages.config
+++ b/Cloudents.Mobile/packages.config
@@ -38,6 +38,7 @@
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net47" />
   <package id="Owin" version="1.0" targetFramework="net46" />
   <package id="Swashbuckle.Core" version="5.4.0" targetFramework="net47" />
+  <package id="System.Data.SqlClient" version="4.4.0" targetFramework="net47" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.0" targetFramework="net46" />
   <package id="System.IdentityModel.Tokens.Jwt" version="4.0.3.308261200" targetFramework="net46" />
   <package id="System.Spatial" version="5.8.1" targetFramework="net46" />
