--- a/Cloudents.Infrastructure.Framework.Test/Cloudents.Infrastructure.Framework.Test.csproj
+++ b/Cloudents.Infrastructure.Framework.Test/Cloudents.Infrastructure.Framework.Test.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="MSTest.TestAdapter" Version="1.2.0" />
     <PackageReference Include="MSTest.TestFramework" Version="1.2.0" />
     <PackageReference Include="NHibernate" Version="5.0.3" />
+    <PackageReference Include="System.Data.SQLite.Core" Version="1.0.107" />
   </ItemGroup>
 
   <ItemGroup>
