--- a/Cloudents.Web/package.json
+++ b/Cloudents.Web/package.json
@@ -62,7 +62,8 @@
     "query-string": "^5.0.1",
     "jest": "^22.1.4",
     "@types/jest": "^22.0.1",
-    "vue-jest": "^2.0.0"
+    "vue-jest": "^2.0.0",
+    "smartbanner": "^1.0.0"
   },
   "jest": {
     "transform": {
