--- a/Cloudents.Core/Cloudents.Core.csproj
+++ b/Cloudents.Core/Cloudents.Core.csproj
@@ -12,6 +12,7 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="JetBrains.Annotations" Version="11.1.0" />
     <PackageReference Include="Microsoft.Spatial" Version="7.2.0" />
     <PackageReference Include="Autofac" Version="4.6.2" />
     <PackageReference Include="System.Collections.Immutable" Version="1.4.0" />
