--- a/Cloudents.MobileApi/Cloudents.MobileApi.csproj
+++ b/Cloudents.MobileApi/Cloudents.MobileApi.csproj
@@ -19,13 +19,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Binders\**" />
-    <Content Remove="Binders\**" />
-    <EmbeddedResource Remove="Binders\**" />
-    <None Remove="Binders\**" />
-  </ItemGroup>
-
-  <ItemGroup>
     <Compile Remove="Filters\VersionConstraint.cs" />
     <Compile Remove="Filters\VersionedRoute.cs" />
   </ItemGroup>
@@ -37,6 +30,9 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.0.2" />
     <PackageReference Include="Autofac" Version="4.6.2" />
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.ResponseCaching" Version="2.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.ResponseCompression" Version="2.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Rewrite" Version="2.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="1.1.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.4.0" />
