--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,4 @@ UpgradeLog*.XML
 Zbang.Cloudents.MobileApp2/Properties/PublishProfiles/mobile-cloudents.pubxml
 Cloudents.Web/wwwroot/dist/main.js
 /Cloudents.Web/.idea
+.idea/
