--- a/Cloudents.Web/package.json
+++ b/Cloudents.Web/package.json
@@ -7,7 +7,8 @@
   },
   "scripts": {
     "test": "jest",
-    "client": "webpack --config webpack.config.vendor.js"
+    "client": "webpack --config webpack.config.vendor.js",
+    "server": "webpack --config webpack.config.server.js"
   },
   "devDependencies": {
     "aspnet-prerendering": "3.0.1",
