--- a/Cloudents.Web/package.json
+++ b/Cloudents.Web/package.json
@@ -67,7 +67,8 @@
     "jest": "^22.1.4",
     "@types/jest": "^22.0.1",
     "vue-jest": "^2.0.0",
-    "smartbanner.js": "^1.9.1"
+    "smartbanner.js": "^1.9.1",
+    "babel-plugin-dynamic-import-node":"^1.2.0"
   },
   "jest": {
     "transform": {
