fix blog to work with ssr (issue dynamic-import-node) load sync also in client mode!!

--- a/Cloudents.Web/package.json
+++ b/Cloudents.Web/package.json
@@ -36,15 +36,16 @@
     "stylus-loader": "^3.0.1",
     "url-loader": "^0.6.2",
     "v-debounce": "^0.1.2",
-    "vue": "2.5.13",
-    "vue-server-renderer": "2.5.13",
+    "vue": "2.5.16",
+    "vue-server-renderer": "2.5.16",
+    "vue-style-loader":"^4.1.0",
     "vue-adsense": "^1.0.1",
     "vue-avatar-component": "^1.2.4",
     "vue-loader": "^13.3.0",
     "vue-router": "^3.0.1",
     "vue-star-rating": "^1.5.0",
     "vue-svg-loader": "^0.3.0",
-    "vue-template-compiler": "2.5.13",
+    "vue-template-compiler": "2.5.16",
     "vue-scrollto": "2.8.0",
     "vuetify": "^0.17.3",
     "vuetify-loader": "^0.1.1",
@@ -52,10 +53,10 @@
     "vuex-persistedstate": "^2.1.2",
     "vue-analytics": "^5.5.0",
     "webpack": "^3.8.1",
-    "webpack-hot-middleware": "^2.20.0",
+    "webpack-hot-middleware": "^2.21.2",
     "webpack-visualizer-plugin": "0.1.11",
     "webpack-stats-plugin": "0.1.5",
-    "clean-webpack-plugin": "0.1.17",
+    "clean-webpack-plugin": "0.1.19",
     "vue-lazyload": "^1.1.4",
     "webfonts-loader": "4.0.1",
     "purifycss-webpack": "0.7.0",
