--- a/ConsoleApp/ConsoleApp.csproj
+++ b/ConsoleApp/ConsoleApp.csproj
@@ -12,8 +12,8 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac" Version="4.6.2" />
+    <PackageReference Include="Google.Apis.Sheets.v4" Version="1.19.0.684" />
     <PackageReference Include="System.Data.SqlClient" Version="4.4.0" />
-    <Compile Include="GoogleSheets.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -28,9 +28,6 @@
     <ProjectReference Include="..\Cloudents.Infrastructure.Storage\Cloudents.Infrastructure.Storage.csproj" />
     <ProjectReference Include="..\Cloudents.Infrastructure\Cloudents.Infrastructure.csproj" />
     <ProjectReference Include="..\Cloudents.Web.Extensions\Cloudents.Web.Extensions.csproj" />
-    </PackageReference>
-    <PackageReference Include="Google.Gdata.Client.Core">
-      <Version>1.0.2</Version>
   </ItemGroup>
 
   <ItemGroup>
