make babel_env variable for babel distinction

--- a/Cloudents.Web/.babelrc
+++ b/Cloudents.Web/.babelrc
@@ -1,7 +1,12 @@
 ﻿{
+  "env":{
+    "ssr":{
+      "plugins": [
+        "dynamic-import-node"]
+    }
+  },
   "presets": [ "env", "es2015" ],
   "plugins": [
-    "dynamic-import-node",
     "syntax-dynamic-import",
     "transform-object-rest-spread",
     [
