--- a/Cloudents.Web/appsettings.Development.json
+++ b/Cloudents.Web/appsettings.Development.json
@@ -4,5 +4,5 @@
   },
   "Ips": "31.154.39.170",
   "SystemUrl": "https://www.spitball.co:44345/",
-  "ApiEndpoint": "https://api.spitball.co/api/"
+  "ApiEndpoint": "https://spitabll-api-dev.azurewebsites.net/api/"
 }
