--- a/Cloudents.Web/package.json
+++ b/Cloudents.Web/package.json
@@ -7,8 +7,8 @@
   },
   "scripts": {
     "test": "jest",
-    "client": "cross-env BABEL_ENV=client webpack --config webpack.config.vendor.js",
-    "server": "cross-env BABEL_ENV=ssr webpack --config webpack.config.server.js"
+    "client": "webpack --config webpack.config.vendor.js",
+    "server": "webpack --config webpack.config.server.js"
   },
   "devDependencies": {
     "@types/jest": "^22.0.1",
@@ -25,7 +25,6 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "clean-webpack-plugin": "0.1.19",
-    "cross-env": "^5.1.4",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
