--- a/Zbang.Zbox.WorkerRoleSearch/Zbang.Zbox.WorkerRoleSearch.csproj
+++ b/Zbang.Zbox.WorkerRoleSearch/Zbang.Zbox.WorkerRoleSearch.csproj
@@ -129,6 +129,14 @@
       <Project>{85208b6b-6ad1-4b2e-8cc7-eec6990085a7}</Project>
       <Name>Cloudents.Core</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Cloudents.Infrastructure.Framework\Cloudents.Infrastructure.Framework.csproj">
+      <Project>{7144fd3f-2400-40bf-bc67-1864057e371e}</Project>
+      <Name>Cloudents.Infrastructure.Framework</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Cloudents.Infrastructure.Storage\Cloudents.Infrastructure.Storage.csproj">
+      <Project>{2917dcea-c197-44b9-9a24-31de33fbaf3d}</Project>
+      <Name>Cloudents.Infrastructure.Storage</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Cloudents.Infrastructure\Cloudents.Infrastructure.csproj">
       <Project>{1464aece-aaf3-4910-a0da-153420580a69}</Project>
       <Name>Cloudents.Infrastructure</Name>
