--- a/Cloudents.Infrastructure.Test/Cloudents.Infrastructure.Test.csproj
+++ b/Cloudents.Infrastructure.Test/Cloudents.Infrastructure.Test.csproj
@@ -20,6 +20,8 @@
     <PackageReference Include="FluentAssertions" Version="5.3.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.2.1" />
     <PackageReference Include="MSTest.TestFramework" Version="1.2.1" />
+    <PackageReference Include="NHibernate" Version="5.1.1" />
+    <PackageReference Include="System.Data.SQLite.Core" Version="1.0.107" />
   </ItemGroup>
 
   <ItemGroup>
