--- a/Cloudents.Web/appsettings.json
+++ b/Cloudents.Web/appsettings.json
@@ -9,6 +9,10 @@
     "SearchServiceName": "cloudents",
     "SearchServiceAdminApiKey": "5B0433BFBBE625C9D60F7330CFF103F0"
   },
+  "GoogleReCaptcha": {
+    "Key": "6LcuVFYUAAAAAOPLI1jZDkFQAdhtU368n2dlM0e1",
+    "Secret": "6LcuVFYUAAAAAOghJH2R17kMtMElH2tvuP8GgKAY"
+  },
   "Redis": "zboxcache.redis.cache.windows.net,abortConnect=false,allowAdmin=true,ssl=true,password=CxHKyXDx40vIS5EEYT0UfnVIR1OJQSPrNnXFFdi3UGI=",
 
   "Ips": "31.154.39.170",
