--- a/Cloudents.Infrastructure/Cloudents.Infrastructure.csproj
+++ b/Cloudents.Infrastructure/Cloudents.Infrastructure.csproj
@@ -39,6 +39,7 @@
     <PackageReference Include="protobuf-net" Version="2.3.7" />
     <PackageReference Include="Sendgrid" Version="9.9.0" />
     <PackageReference Include="Spitball.Luis" Version="1.1.3" />
+    <PackageReference Include="Twilio" Version="5.12.0" />
   </ItemGroup>
 
   <ItemGroup>
