--- a/Cloudents.Web/package.json
+++ b/Cloudents.Web/package.json
@@ -24,6 +24,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
+    "babel-minify": "^0.4.1",
     "clean-webpack-plugin": "0.1.19",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.2",
@@ -68,7 +69,8 @@
     "webpack-hot-middleware": "^2.21.2",
     "webpack-merge": "4.1.1",
     "webpack-stats-plugin": "0.1.5",
-    "webpack-visualizer-plugin": "0.1.11"
+    "webpack-visualizer-plugin": "0.1.11",
+    "vue-google-signin-button": "^1.0.2"
   },
   "jest": {
     "transform": {
