--- a/Cloudents.Web/appsettings.Development.json
+++ b/Cloudents.Web/appsettings.Development.json
@@ -3,6 +3,7 @@
     "DefaultConnection": "Server=tcp:on0rodxe8f.database.windows.net;Database=ZBoxNew_Develop;User ID=ZBoxAdmin@on0rodxe8f;Password=Pa$$W0rd;Trusted_Connection=False;Encrypt=True;Asynchronous Processing=True;Connection Timeout=30;MultipleActiveResultSets=true;"
   },
   "Ips": "31.154.39.170",
-  "SystemUrl": "https://www.spitball.co:44345/",
-  "ApiEndpoint": "https://spitabll-api-dev.azurewebsites.net/api/"
+  "ApiEndpoint": "/",
+  "FunctionEndpoint": "http://localhost:7071",
+  "Storage": "UseDevelopmentStorage=true"
 }
