--- a/Cloudents.Web/package.json
+++ b/Cloudents.Web/package.json
@@ -69,8 +69,7 @@
     "webpack-hot-middleware": "^2.21.2",
     "webpack-merge": "4.1.1",
     "webpack-stats-plugin": "0.1.5",
-    "webpack-visualizer-plugin": "0.1.11",
-    "vue-google-signin-button": "^1.0.2"
+    "webpack-visualizer-plugin": "0.1.11"
   },
   "jest": {
     "transform": {
