--- a/ConsoleApp/ConsoleApp.csproj
+++ b/ConsoleApp/ConsoleApp.csproj
@@ -13,8 +13,10 @@
   <ItemGroup>
     <PackageReference Include="Autofac" Version="4.6.2" />
     <PackageReference Include="Autofac.Extras.Moq" Version="4.2.0" />
+    <PackageReference Include="Nethereum.HdWallet" Version="2.4.0" />
+    <PackageReference Include="Nethereum.Web3" Version="2.4.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.4.0" />
-    <PackageReference Include="Google.Apis.Sheets.v4" Version="1.32.2.1170"/>
+    <PackageReference Include="Google.Apis.Sheets.v4" Version="1.32.2.1170" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
