--- a/Cloudents.Infrastructure/Cloudents.Infrastructure.csproj
+++ b/Cloudents.Infrastructure/Cloudents.Infrastructure.csproj
@@ -36,6 +36,8 @@
     <PackageReference Include="Microsoft.Azure.DocumentDB.Core" Version="1.8.1" />
     <PackageReference Include="Microsoft.Azure.Search" Version="5.0.0" />
     <PackageReference Include="Nager.PublicSuffix" Version="1.2.0" />
+    <PackageReference Include="Nethereum.HdWallet" Version="2.4.0" />
+    <PackageReference Include="Nethereum.Web3" Version="2.4.0" />
     <PackageReference Include="NHibernate" Version="5.1.1" />
     <PackageReference Include="protobuf-net" Version="2.3.7" />
     <PackageReference Include="Sendgrid" Version="9.9.0" />
