--- a/Cloudents.Web/package.json
+++ b/Cloudents.Web/package.json
@@ -18,13 +18,13 @@
     "babel-core": "^6.26.0",
     "babel-jest": "^22.1.0",
     "babel-loader": "^7.1.2",
+    "babel-minify": "^0.4.1",
     "babel-plugin-dynamic-import-node": "^1.2.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-imports": "^1.4.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
-    "babel-minify": "^0.4.1",
     "clean-webpack-plugin": "0.1.19",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.2",
@@ -66,6 +66,7 @@
     "webfontloader": "1.6.28",
     "webfonts-loader": "4.0.1",
     "webpack": "^3.8.1",
+    "webpack-cli": "^2.1.3",
     "webpack-hot-middleware": "^2.21.2",
     "webpack-merge": "4.1.1",
     "webpack-stats-plugin": "0.1.5",
