Implement chat from chatjs

--- a/Cloudents.Web/package.json
+++ b/Cloudents.Web/package.json
@@ -72,7 +72,8 @@
     "webpack-stats-plugin": "0.1.5",
     "webpack-visualizer-plugin": "0.1.11",
     "vue-recaptcha": "^1.1.1",
-    "html5-uploader": "^0.1.1"
+    "html5-uploader": "^0.1.1",
+    "talkjs": "^0.1.5"
   },
   "jest": {
     "transform": {
