--- a/Cloudents.Core/Cloudents.Core.csproj
+++ b/Cloudents.Core/Cloudents.Core.csproj
@@ -20,6 +20,6 @@
     <PackageReference Include="System.Collections.Immutable" Version="1.4.0" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Read\Queries\" />
+    <Folder Include="Query\Queries\" />
   </ItemGroup>
 </Project>
